--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@dfinity/principal": "^0.18.1"
   },
   "devDependencies": {
+    "@dfinity/auth-client": "^0.18.1",
+    "@dfinity/identity": "^0.18.1",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^11.0.0",
